--- a/app/src/main/res/layout/fragment_fragment_top_movies.xml
+++ b/app/src/main/res/layout/fragment_fragment_top_movies.xml
@@ -10,5 +10,6 @@
         android:id="@+id/gridView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left|top" />
+        android:layout_gravity="left|top"
+        android:numColumns="2" />
 </FrameLayout>
